# Reservation

./: .env  Cargo.toml  readme.md
.github/workflows/: work.yml
abi/: Cargo.toml  build.rs
abi/protos/: reservation.proto
abi/src/: config.rs  error.rs  lib.rs
abi/src/error/: conflict.rs  mod.rs
abi/src/pb/: reservation.rs
abi/src/types/: mod.rs  reservation.rs  reservation_query.rs  reservation_status.rs
migrations/: 20230105211421_init.up.sql  20230107090300_reservation.up.sql  20230108075854_reservation_trigger.up.sql  20230108081027_reservation_func.down.sql  20230108081027_reservation_func.up.sql
reservation/: Cargo.toml
reservation/src/: error.rs  lib.rs  manager.rs
rfcs/: 0001-core-reservationt.md
service/: Cargo.toml
service/fixtures/: config.yml
service/src/: lib.rs  main.rs  service.rs
