[package]
name = "reservation-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
abi = { version = "0.1.0", path = "../abi" }
anyhow = "1.0.69"
derive = "1.0.0"
features = "0.10.0"
futures = { version = "0.3.26", default-features = false }
reservation = { version = "0.1.0", path = "../reservation" }
serde = "1.0.152"
serde_yaml = "0.9.18"
tokio = { version = "1.26.0", features = ["full"] }
tonic = { version = "0.8.3", features = ["tokio-rustls", "gzip"] }
